--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       </section>
       <section>
         <h4>How Much Caffeine Is Too Much?</h4>
+        <!-- blasphemy -->
         <img src="assets/article-two.png" alt="placeholder">
         <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
       </section>
