--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hacker Times</title>
+  <title>The Hacker Times</title>
+  <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- NEWSPAPER CONTAINER -->
   <div class="newspaper-container">
     <!-- header -->
     <header>
-      <div class="date">JANUARY 1, 1970</div>
+      <div class="date">MARCH 3, 2022</div>
       <h1>The Hacker Times</h1>
     </header>
     <!-- navigation -->
@@ -32,24 +33,46 @@
       <h2>Have You Tried Turning It On and Off Again?</h2>
       <h5>By Maurice Moss</h5>
       <img src="assets/front-page-article.png" alt="placeholder">
-      <p>
-        Cupcake ipsum dolor sit amet. Candy gummies jelly-o pie toffee cheesecake pastry cake. Soufflé sesame snaps tootsie roll jelly-o soufflé tart gummies. Dessert lollipop halvah brownie chocolate bar gingerbread. Lollipop chocolate bar dragée jelly-o cookie tiramisu icing. Dragée muffin marshmallow jelly beans jelly beans. Tootsie roll pie cheesecake. Brownie biscuit gingerbread cupcake sweet roll sweet jelly-o cookie pie. Lemon drops topping lemon drops jelly beans toffee. Tiramisu cotton candy pie toffee cake chocolate cake apple pie. Cupcake bear claw donut apple pie halvah sesame snaps macaroon tootsie roll
-        </p>
+      <p>Haxx0r ipsum brute force Dennis Ritchie if cookie January 1, 1970. Void mountain dew concurrently tunnel in strlen packet eaten by a grue sudo perl cat port worm piggyback over clock. Kilo warez Starcraft L0phtCrack gnu hash d00dz rsa man pages leet public client todo /dev/null leapfrog back door continue. Access access ban protocol baz ascii exception bar foad emacs. Chown syn tarball bin *.* it's a feature mutex mainframe flood eof root access piggyback true foo double January 1, 1970 linux. Boolean strlen big-endian printf hello world server packet sniffer wombat suitably small values. Bar public continue null L0phtCrack tunnel in all your base are belong to us if man pages Leslie Lamport back door python Donald Knuth. Port memory leak client afk gc foad wabbit error ascii ifdef fail eaten by a grue emacs /dev/null ssh leet baz packet deadlock...</p>
     </main>
     <!-- more articles -->
     <div class="more-articles">
-      <section>
+        <div id="article-one">
         <h4>Tabs vs. Spaces</h4>
         <img src="assets/article-one.png" alt="placeholder">
-        <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
-      </section>
-      <section>
-        <h4>How Much Caffeine Is Too Much?</h4>
-        <!-- blasphemy -->
+        <p class="copy">Haxx0r ipsum protected linux root interpreter float flush pwned bar access alloc exception giga less for perl Dennis Ritchie mailbomb protocol. Fail win case sudo big-endian wannabee tera gc infinite loop. Overflow script kiddies tunnel in gcc system loop bang...</p>
+        </div>
+        <div id="article-two">
+          <h4>How Much Caffeine Is Too Much?</h4>
         <img src="assets/article-two.png" alt="placeholder">
-        <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
-      </section>
+        <p class="copy">Haxx0r ipsum throw packet while ddos bypass false then gnu bubble sort highjack pragma if chown big-endian flush var xss. All your base are belong to us regex stack trace memory leak it's a feature protected /dev/null man pages loop foad socket continue baz tunnel in mainframe...</p>
+        </div>
+        <div id="article-three">
+          <h4>Much Ado About CSSing</h4>
+        <img src="assets/article-three.png" alt="placeholder">
+        <p class="copy">Haxx0r ipsum Starcraft Trojan horse overflow bypass socket foad cache. Infinite loop data true I'm sorry Dave, I'm afraid I can't do that memory leak if injection protected error crack long ssh pragma eaten by a grue. Ack suitably small values leet while perl ascii rm -rf d00dz wannabee grep James T. Kirk...</p>
+        </div>
+        <div id="article-four">
+          <h4>My Life as a HTMLer</h4>
+        <img src="assets/article-four.png" alt="placeholder">
+        <p class="copy">Haxx0r ipsum ban linux packet sniffer thread wabbit suitably small values for infinite loop system default cat pwned mainframe blob. Bar ssh gobble server float d00dz port cache hash access printf stdio.h crack regex eaten by a grue Linus Torvalds afk gc exception. I'm sorry Dave, I'm afraid I can't do that vi brute force cd tera mutex salt hexadecimal...</p>
+        </div>
+        <div id="article-five">
+          <h4>Editorial: Passwords are so 1999</h4>
+        <img src="assets/article-five.jpeg" alt="placeholder">
+        <p class="copy">Haxx0r ipsum mountain dew mailbomb crack float *.* highjack sql ctl-c regex ban mega segfault. /dev/null bar echo bang do printf overflow thread ack ip win hack the mainframe throw I'm compiling xss eaten by a grue pwned python L0phtCrack gcc. Piggyback rm -rf pragma null foo afk baz...</p>
+        </div>
     </div>
+    <footer>
+      <ul>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">CONTRIBUTORS</a></li>
+        <li><a href="#">CAREERS</a></li>
+        <li><a href="#">CONTACT</a></li>
+        <li><a href="#">PRIVACY</a></li>
+        <li><a href="#">SUBSCRIBE</a></li>
+    </footer>
+    <p class="copyright">Copyright 2022 The Hacker Times. All Rights Reserved.</p>
   </div>
 </body>
 </html>
