--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <p class="copy">Haxx0r ipsum ban linux packet sniffer thread wabbit suitably small values for infinite loop system default cat pwned mainframe blob. Bar ssh gobble server float d00dz port cache hash access printf stdio.h crack regex eaten by a grue Linus Torvalds afk gc exception. I'm sorry Dave, I'm afraid I can't do that vi brute force cd tera mutex salt hexadecimal...</p>
         </div>
         <div id="article-five">
-          <h4>Editorial: Passwords are so 1999</h4>
+          <h4>Opinion: Passwords are so '99</h4>
         <img src="assets/article-five.jpeg" alt="placeholder">
         <p class="copy">Haxx0r ipsum mountain dew mailbomb crack float *.* highjack sql ctl-c regex ban mega segfault. /dev/null bar echo bang do printf overflow thread ack ip win hack the mainframe throw I'm compiling xss eaten by a grue pwned python L0phtCrack gcc. Piggyback rm -rf pragma null foo afk baz...</p>
         </div>
